--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           docker build -t $IMAGE_NAME:$IMAGE_TAG ./app
 
       - name: Trivy scan
-        uses: aquasecurity/trivy-action@v0.11.2
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
